<resources>
    <string name="app_name">TMDB</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="removedWatch">Removed from Watch List</string>
    <string name="addWatch">Added to Watch List</string>
    <string name="exit">Are You Want to Exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="watch_list">Watch List</string>
    <string name="there_is_no_movie_yet">There Is No Movies Yet!</string>
    <string name="find_your_movie_by_type_title_categories_years_etc">Find your movies by Type title, categories, years, etc</string>
    <string name="see_all">See all</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="the_movie_db">Home</string>
    <string name="status">Status</string>
    <string name="revenue">Revenue</string>
    <string name="votes">Votes</string>
    <string name="original_title">Original Title</string>
    <string name="overview">Overview</string>
    <string name="images">Images</string>
    <string name="trailers">Trailers</string>
    <string name="top_cast">Top Cast</string>
    <string name="top_crew">Top Crew</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="known_for_department">Known for department</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="popularity">Popularity</string>
    <string name="biography">Biography</string>
    <string name="top_cast_movies">Acting Movies</string>
    <string name="top_crew_movies">As Crew Movies</string>
    <string name="also_known_as">Also known as</string>
    <string name="up">Upcoming Movies</string>
    <string name="ra">Top Rated Movies</string>
    <string name="po">Popular Movies</string>
    <string name="page">Page</string>
</resources>