<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.MyHome.MyHomeFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainLayout"
            android:visibility="gone"
            android:paddingBottom="80sp">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20sp"
                android:text="@string/popular"
                android:layout_marginTop="70sp"
                android:id="@+id/txt1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/txt1"
                app:layout_constraintBottom_toBottomOf="@id/txt1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30sp"
                android:text="@string/see_all"
                android:id="@+id/seeallpopular"
                android:textStyle="bold"
                android:textColor="@color/SecondColor"
                android:textSize="12sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler1"
                android:layout_width="match_parent"
                android:layout_marginStart="20sp"
                app:layout_constraintTop_toBottomOf="@id/txt1"
                android:layout_marginTop="10sp"
                android:paddingEnd="20sp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20sp"
                app:layout_constraintTop_toBottomOf="@id/recycler1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/top_rated"
                android:id="@+id/txt2"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/txt2"
                app:layout_constraintBottom_toBottomOf="@id/txt2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30sp"
                android:text="@string/see_all"
                android:id="@+id/seealltop"
                android:textStyle="bold"
                android:textColor="@color/SecondColor"
                android:textSize="12sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler2"
                android:layout_width="match_parent"
                android:layout_marginStart="20sp"
                android:paddingEnd="20sp"
                app:layout_constraintTop_toBottomOf="@id/txt2"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20sp"
                app:layout_constraintTop_toBottomOf="@id/recycler2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/now_playing"
                android:id="@+id/txt3"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler3"
                android:layout_width="match_parent"
                android:layout_marginStart="10sp"
                android:paddingEnd="20sp"
                app:layout_constraintTop_toBottomOf="@id/txt3"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20sp"
                app:layout_constraintTop_toBottomOf="@id/recycler3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:text="@string/upcoming"
                android:id="@+id/txt4"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/txt4"
                app:layout_constraintBottom_toBottomOf="@id/txt4"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30sp"
                android:text="@string/see_all"
                android:id="@+id/seeallupcoming"
                android:textStyle="bold"
                android:textColor="@color/SecondColor"
                android:textSize="12sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler4"
                android:layout_width="match_parent"
                android:layout_marginStart="20sp"
                android:paddingEnd="20sp"
                app:layout_constraintTop_toBottomOf="@id/txt4"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/SpinKitView.Circle"
        app:SpinKit_Color="@color/SecondColor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/mainColor"
        android:id="@+id/lay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/lay1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/the_movie_db"
                android:id="@+id/title"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toEndOf="@id/title"
                app:layout_constraintTop_toTopOf="@id/title"
                app:layout_constraintBottom_toBottomOf="@id/title"
                android:src="@drawable/tmdp"
                android:layout_marginStart="10sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>